--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "vue": "^3.3.11"
   },
