--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@radix-icons/vue": "^1.0.0",
+    "@tanstack/vue-query": "^5.17.9",
     "animate.css": "^4.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "vue": "^3.3.11"
+    "path": "^0.12.7",
+    "radix-vue": "^1.3.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.18.1",
